Reattach to use namespace in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,9 @@ bind \ send-prefix                     # `\ for a literal `
 # Use 256 colors
 set -g default-terminal "screen-256color"
 
+# Reattach username space
+set-option -g default-command "zsh -c exit > /dev/null 2>&1; reattach-to-user-namespace -l zsh"
+
 # Restore "open new pane/window in current directory" functionality in pre 1.9
 bind c new-window -c "#{pane_current_path}"
 
