Add boards shortcut to tmux; Add some git aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,3 +70,6 @@ bind -t vi-copy 'y' copy-selection
 
 # Yank to clipboard
 bind-key -t vi-copy y copy-pipe "pbcopy"
+
+# Switch to boards pane
+bind b select-window -t 7
