Streamline tmux sockets and sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,3 +73,6 @@ bind-key -t vi-copy y copy-pipe "pbcopy"
 
 # Switch to boards pane
 bind b select-window -t 7
+
+# Start a new session if one doesn't exist
+new-session -A -s default -n editor
