Move bundle path; Add vim keybindings
Some other abbreviations

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,4 +75,4 @@ bind-key -t vi-copy y copy-pipe "pbcopy"
 bind b select-window -t 7
 
 # Start a new session if one doesn't exist
-new-session -A -s default -n editor
+# new-session -A -s default -n editor
