--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,8 @@ source-file ~/.tmux/tmuxline.conf
 
 set-option -g base-index 1             # Start window index count at 1 instead of 0
 set-window-option -g pane-base-index 1 # Tmuxinator likes 1 based panes too
-set -g buffer-limit 1000               # Increase buffer limits kept for back referencing
+set -g focus-events on                 # Send focus events to vim
+set -g buffer-limit 100000             # Increase buffer limits kept for back referencing
 set -g history-limit 500000            # Set the history limit higher
 set -s escape-time 0                   # Allows for faster key repetition
 set -g prefix `                        # Change the default prefix -- C-b is not acceptable -- Vim uses it
@@ -73,6 +74,14 @@ bind-key -t vi-copy y copy-pipe "pbcopy"
 
 # Switch to boards pane
 bind b select-window -t 7
+
+# Dim inactive panes
+set -g pane-border-bg colour7
+set -g pane-border-fg colour251
+set -g pane-active-border-bg colour15
+set -g pane-active-border-fg colour251
+set -g window-style 'bg=colour7'
+set -g window-active-style 'bg=colour15'
 
 # Start a new session if one doesn't exist
 # new-session -A -s default -n editor
