--- a/.tmux/tmuxline.conf
+++ b/.tmux/tmuxline.conf
@@ -21,9 +21,9 @@ setw -g window-status-attr "none"
 setw -g window-status-activity-bg "colour7"
 setw -g window-status-activity-attr "none"
 setw -g window-status-activity-fg "colour4"
-setw -g window-status-separator ""
+setw -g window-status-separator "|"
 setw -g window-status-bg "colour7"
 set -g status-left "#[fg=colour8,bg=colour4] #S #[fg=colour4,bg=colour7,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour7] %a, %b %-d %-l:%M:%S%p #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour14] #(~/bin/utcdate) #[fg=colour11,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #h "
 setw -g window-status-format "#[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour14] #{?window_zoomed_flag,#[bg=4],#[bg=14]}#I #W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour15] #{?window_zoomed_flag,#[bg=4],#[bg=14]}#I #W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
