Experiment with mouse-mode
(not liking it)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
 source-file ~/.tmux/tmuxline.conf
 
+# Enable/disable mouse mode (off by default)
+bind m set -g mouse on \; display "Mouse ON"
+bind M set -g mouse off \; display "Mouse OFF"
+
 set-option -g base-index 1             # Start window index count at 1 instead of 0
 set-window-option -g pane-base-index 1 # Tmuxinator likes 1 based panes too
 set -g focus-events on                 # Send focus events to vim
