Use diff-so-fancy for git diff
Use `brew install diff-so-fancy` to get the binary.

Use n/N in less to navigate files within the diff

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
   branch = auto
 [core]
   excludesfile = ~/.gitignore
+  pager = diff-so-fancy | less --tabs=4 -RFX --pattern '^(Date|added|deleted|modified): '
 [git-up "bundler"]
   check = true
 [rebase]
