Update tmux conf for Tmux 2.5

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,11 +70,11 @@ bind M-z send-keys 'M-z'
 
 # make vi mode more vi like
 bind Escape copy-mode
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
-# Yank to clipboard
-bind-key -t vi-copy y copy-pipe "pbcopy"
+# Yank to clipboard too
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Switch to boards pane
 bind b select-window -t 7
