Let's go dark; our eyes needs it!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-# source-file ~/.tmux/tmuxline.dark.conf
-source-file ~/.tmux/tmuxline.light.conf
+source-file ~/.tmux/tmuxline.dark.conf
+# source-file ~/.tmux/tmuxline.light.conf
 
 # Enable/disable mouse mode (off by default)
 bind m set -g mouse on \; display "Mouse ON"
@@ -81,20 +81,20 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 bind b select-window -t 7
 
 # Dim inactive panes (light)
-set -g pane-border-bg colour7
-set -g pane-border-fg colour15
-set -g pane-active-border-bg colour15
-set -g pane-active-border-fg colour7
-set -g window-style 'bg=colour7'
-set -g window-active-style 'bg=colour15'
+# set -g pane-border-bg colour7
+# set -g pane-border-fg colour15
+# set -g pane-active-border-bg colour15
+# set -g pane-active-border-fg colour7
+# set -g window-style 'bg=colour7'
+# set -g window-active-style 'bg=colour15'
 
 # Dim inactive panes (dark)
-# set -g pane-border-bg colour0
-# set -g pane-border-fg colour8
-# set -g pane-active-border-bg colour8
-# set -g pane-active-border-fg colour8
-# set -g window-style 'bg=colour0'
-# set -g window-active-style 'bg=colour8'
+set -g pane-border-bg colour0
+set -g pane-border-fg colour8
+set -g pane-active-border-bg colour8
+set -g pane-active-border-fg colour8
+set -g window-style 'bg=colour0'
+set -g window-active-style 'bg=colour8'
 
 # Start a new session if one doesn't exist
 # new-session -A -s default -n editor
