--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ setw -g aggressive-resize on           # Don't constrain window size to smallest
 # set -g focus-events on                 # Send focus events to vim
 # setw -g monitor-activity on            # Highlight window name when their is activity
 
+# Use 256 colors; needed for lightline.vim
+set -g default-terminal "screen-256color"
+
 # Restore "open new pane/window in current directory" functionality
 bind -n M-c new-window -c "#{pane_current_path}"
 
