christoomey/vim-tmux-navigator: seamless nav between vim/tmux panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,8 +39,7 @@ bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
 # use Option+h|j|k|l to move between panes unless in vim (so that vim can handle moving around)
-# is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-is_vim='false'
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
 bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
 bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
