vim-diminactive: when defocusing vim, dim it's background

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set-option -g base-index 1             # Start window index count at 1 instead o
 set -g history-limit 500000            # Set the history limit higher
 set -s escape-time 0                   # Allows for faster key repetition
 setw -g aggressive-resize on           # Don't constrain window size to smallest client if they're on another window
-# set -g focus-events on                 # Send focus events to vim
+set -g focus-events on                 # Send focus events to vim
 # setw -g monitor-activity on            # Highlight window name when their is activity
 
 # Use 256 colors; needed for lightline.vim
