Add mouse support
Use "+y to copy selection to clipboard in vim; Use Cmd-R to disable
mouse reporting in Terminal (Or hold the Fn key).

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ set -s escape-time 0                   # Allows for faster key repetition
 setw -g aggressive-resize on           # Don't constrain window size to smallest client if they're on another window
 set -g focus-events on                 # Send focus events to vim
 # setw -g monitor-activity on            # Highlight window name when their is activity
+set -g mouse on                        # Enable mouse mode: scrolling, pane selecting and window selecting
 
 # Use 256 colors; needed for lightline.vim
 set -g default-terminal "screen-256color"
@@ -26,6 +27,7 @@ setw -g mode-keys vi
 bind Escape copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # Switch windows via Option+number
 bind -n M-1 select-window -t 1
