Source a .tmux.conf.local
I'm currently using this to source the light theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,3 +63,5 @@ bind M-k send-keys 'M-k'
 bind M-l send-keys 'M-l'
 bind M-z send-keys 'M-z'
 bind M-c send-keys 'M-c'
+
+if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
