Add coc.vim, nvim, and new tmux nav shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-source-file ~/.tmux/tmuxline.dark.conf
-# source-file ~/.tmux/tmuxline.light.conf
+# source-file ~/.tmux/tmuxline.dark.conf
+source-file ~/.tmux/tmuxline.light.conf
 
 set-option -g base-index 1             # Start window index count at 1 instead of 0
 set -g history-limit 500000            # Set the history limit higher
@@ -8,19 +8,17 @@ setw -g aggressive-resize on           # Don't constrain window size to smallest
 set -g focus-events on                 # Send focus events to vim
 # setw -g monitor-activity on            # Highlight window name when their is activity
 set -g mouse on                        # Enable mouse mode: scrolling, pane selecting and window selecting
+set -g status-keys emacs               # Use emacs / readline key-bindings at the tmux prompt
 
 # Use 256 colors; needed for lightline.vim
 set -g default-terminal "screen-256color"
 
 # Restore "open new pane/window in current directory" functionality
-bind -n M-c new-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-# Use v and s to split the window up
-bind -n M-v split-window -h -c "#{pane_current_path}"
-bind -n M-s split-window -v -c "#{pane_current_path}"
-
-# Option+z to zoom
-bind -n M-z resize-pane -Z
+# More intuitive keybindings for splitting
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # use vim keys while in copy mode
 setw -g mode-keys vi
@@ -28,7 +26,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
-# Switch windows via Option+number
+# Switch windows via Meta+number
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
@@ -39,12 +37,15 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
-# use Option+h|j|k|l to move between panes unless in vim (so that vim can handle moving around)
+# use Ctrl+h|j|k|l to move between panes unless in vim (so that vim can handle moving around)
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
-bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
-bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
-bind -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
+# Secondary binding for C-l to retain redraw
+# bind C-l if-shell "$is_vim" "send-keys Escape\; send-keys l" "send-keys C-l"
 
 # Use capital vim motion keys for resizing
 bind -n M-J resize-pane -D
@@ -52,16 +53,18 @@ bind -n M-K resize-pane -U
 bind -n M-H resize-pane -L
 bind -n M-L resize-pane -R
 
-# Send literal Option+Arrow/h|j|k|l|z|etc
-bind M-h send-keys 'M-H'
-bind M-j send-keys 'M-J'
-bind M-k send-keys 'M-K'
-bind M-l send-keys 'M-L'
-bind M-h send-keys 'M-h'
-bind M-j send-keys 'M-j'
-bind M-k send-keys 'M-k'
-bind M-l send-keys 'M-l'
-bind M-z send-keys 'M-z'
+# Send literal Ctrl+h|j|k|z|etc
+bind M-H send-keys 'M-H'
+bind M-J send-keys 'M-J'
+bind M-K send-keys 'M-K'
+bind M-L send-keys 'M-L'
+bind C-h send-keys 'C-h'
+bind C-j send-keys 'C-j'
+bind C-k send-keys 'C-k'
 bind M-c send-keys 'M-c'
+
+
+# Reload tmux.conf with prefix-r
+bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
