--- a/.gitconfig.private.example
+++ b/.gitconfig.private.example
@@ -1,6 +1,6 @@
 [user]
   name = Eric Boehs
-  email = ericboehs@gmail.com
+  email = eric@boehs.com
 [github]
   user = ericboehs
 [credential "https://github.com"]
