--- a/.tmux/tmuxline.light.conf
+++ b/.tmux/tmuxline.light.conf
@@ -13,6 +13,9 @@ set -g status-right "#[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]#[fg=
 setw -g window-status-format "#[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour15] #{?window_zoomed_flag,#[bg=4],#[bg=14]}#I #W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
 
+# Set message command colors
+set-option -g message-style "fg=colour11,bright,bg=colour15,nobold"
+
 # Dim inactive panes (light)
 set -g window-style 'bg=colour7'
 set -g window-active-style 'bg=colour15'
