--- a/.tmux/tmuxline.dark.conf
+++ b/.tmux/tmuxline.dark.conf
@@ -1,17 +1,22 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Mon, 23 May 2016
+# on Sat, 30 Nov 2019
 
-set -g status-bg "colour0"
-set -g status-interval "1"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status "on"
-set -g status-right-length "100"
-setw -g window-status-separator ""
-set -g status-left "#[fg=colour15,bg=colour4] #S #[fg=colour4,bg=colour0,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour14,bg=colour0] %a, %b %-d %-l:%M:%S%p #[fg=colour10,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour14,bg=colour10] #(~/bin/utcdate) #[fg=colour12,bg=colour10,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour12] #h "
-setw -g window-status-format "#[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour0,bg=colour10,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour10] #{?window_zoomed_flag,#[bg=4],#[bg=10]}#I #W #[fg=colour10,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour8,bg=colour11"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour4"
+set -g status-style "none,bg=colour0"
+set -g message-style "fg=colour8,bg=colour11"
+set -g pane-border-style "fg=colour11"
+setw -g window-status-activity-style "none"
+setw -g window-status-style "none,fg=colour11,bg=colour0"
+
+set -g status-left "#[fg=colour8,bg=colour4] #S #[fg=colour4,bg=colour0,nobold,nounderscore,noitalics]"
+# set -g status-right "#[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour11] %Y-%m-%d %H:%M #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour14] #h "
+set -g status-right "#[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour0] %a, %b %-d %-l:%M:%S%p #[fg=colour10,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour14,bg=colour10] #(~/bin/utcdate) #[fg=colour12,bg=colour10,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour12] #h "
+setw -g window-status-format "#[fg=colour11,bg=colour0] #I #[fg=colour11,bg=colour0]#W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour11,bg=colour8] #I #[fg=colour11,bg=colour8]#W #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
 
 # Dim inactive panes (dark)
+set -g window-style 'bg=colour0'
 set -g window-active-style 'bg=colour8'
