Fix tmux split-window; add yarn path; update minpac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g default-terminal "screen-256color"
 bind c new-window -c "#{pane_current_path}"
 
 # More intuitive keybindings for splitting
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # use vim keys while in copy mode
