Update tmux dark and light colors
Previously switching between dark and light mode would leave tmux in a
weird color state. This was due to the config being setup for an older
version of tmux.

--- a/.tmux/tmuxline.dark.conf
+++ b/.tmux/tmuxline.dark.conf
@@ -20,3 +20,6 @@ setw -g window-status-current-format "#[fg=colour0,bg=colour11,nobold,noundersco
 # Dim inactive panes (dark)
 set -g window-style 'bg=colour0'
 set -g window-active-style 'bg=colour8'
+
+# Set select color
+set -g mode-style 'bg=colour0'
