--- a/.tmux/tmuxline.light.conf
+++ b/.tmux/tmuxline.light.conf
@@ -1,17 +1,27 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Mon, 23 May 2016
+# on Wed, 26 Aug 2020
 
-set -g status-bg "colour7"
-set -g status-interval "1"
 set -g status-justify "left"
-set -g status-left-length "100"
 set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour15,bg=colour12"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour4"
+set -g status-style "none,bg=colour7"
+set -g message-style "fg=colour15,bg=colour12"
+set -g pane-border-style "fg=colour12"
 set -g status-right-length "100"
-setw -g window-status-separator "|"
-set -g status-left "#[fg=colour8,bg=colour4] #S #[fg=colour4,bg=colour7,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour7] %a, %b %-d %-l:%M:%S%p #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour14] #(~/bin/utcdate) #[fg=colour11,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #h "
-setw -g window-status-format "#[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour7,bg=colour7,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour15] #{?window_zoomed_flag,#[bg=4],#[bg=14]}#I #W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=colour10,bg=colour7"
+set -g status-left "#[fg=colour15,bg=colour4] #S #[fg=colour4,bg=colour7,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour10,bg=colour7,nobold,nounderscore,noitalics] %Y-%m-%d %H:%M #[fg=colour15,bg=colour14] #(~/bin/utcdate) #[fg=colour10,bg=colour12,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour10] #h "
+setw -g window-status-format "#[fg=colour10,bg=colour7] #I #[fg=colour10,bg=colour7]#W "
+setw -g window-status-current-format "#[fg=colour10,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour10]#{?window_zoomed_flag,#[bg=4],#[bg=14]} #I #W #[fg=colour12,bg=colour7,nobold,nounderscore,noitalics]"
+
+# Old colors:
+# setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour15]#{?window_zoomed_flag,#[bg=4],#[bg=14]} #I #W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
 
 # Set message command colors
 set-option -g message-style "fg=colour11,bright,bg=colour15,nobold"
@@ -19,3 +29,6 @@ set-option -g message-style "fg=colour11,bright,bg=colour15,nobold"
 # Dim inactive panes (light)
 set -g window-style 'bg=colour7'
 set -g window-active-style 'bg=colour15'
+
+# Set select color
+set -g mode-style 'bg=colour7'
