--- a/.bundle/config
+++ b/.bundle/config
@@ -1,5 +1,5 @@
 ---
-BUNDLE_PATH: .bundle/bundle
-BUNDLE_BIN: .bundle/bundle/bin
-BUNDLE_JOBS: 3
-BUNDLE_DISABLE_SHARED_GEMS: '1'
+BUNDLE_PATH: ".bundle/bundle"
+BUNDLE_BIN: ".bundle/bundle/bin"
+BUNDLE_JOBS: "3"
+BUNDLE_DISABLE_SHARED_GEMS: "1"
