--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-# source-file ~/.tmux/tmuxline.dark.conf
 source-file ~/.tmux/tmuxline.light.conf
 
 set-option -g base-index 1             # Start window index count at 1 instead of 0
@@ -6,7 +5,6 @@ set -g history-limit 500000            # Set the history limit higher
 set -s escape-time 0                   # Allows for faster key repetition
 setw -g aggressive-resize on           # Don't constrain window size to smallest client if they're on another window
 set -g focus-events on                 # Send focus events to vim
-# setw -g monitor-activity on            # Highlight window name when their is activity
 set -g mouse on                        # Enable mouse mode: scrolling, pane selecting and window selecting
 set -g status-keys emacs               # Use emacs / readline key-bindings at the tmux prompt
 
@@ -42,15 +40,15 @@ is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # Secondary binding for C-l to retain redraw
 # bind C-l if-shell "$is_vim" "send-keys Escape\; send-keys l" "send-keys C-l"
 
-# Use capital vim motion keys for resizing
+# Use Option + capital vim motion keys for resizing
+bind -n M-H resize-pane -L
 bind -n M-J resize-pane -D
 bind -n M-K resize-pane -U
-bind -n M-H resize-pane -L
 bind -n M-L resize-pane -R
 
 # Send literal Ctrl+h|j|k|z|etc
@@ -61,8 +59,6 @@ bind M-L send-keys 'M-L'
 bind C-h send-keys 'C-h'
 bind C-j send-keys 'C-j'
 bind C-k send-keys 'C-k'
-bind M-c send-keys 'M-c'
-
 
 # Reload tmux.conf with prefix-r
 bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
