--- a/.tmux/tmuxline.light.conf
+++ b/.tmux/tmuxline.light.conf
@@ -1,34 +1,32 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Wed, 26 Aug 2020
+# on Mon, 30 Aug 2021
 
 set -g status-justify "left"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=colour15,bg=colour12"
+set -g message-command-style "fg=#5C6773,bg=#FFFFFF"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour4"
-set -g status-style "none,bg=colour7"
-set -g message-style "fg=colour15,bg=colour12"
-set -g pane-border-style "fg=colour12"
+set -g pane-active-border-style "fg=#0353BE"
+set -g status-style "none,bg=#FAFAFA"
+set -g message-style "fg=#5C6773,bg=#FFFFFF"
+set -g pane-border-style "fg=#EEEEEE"
 set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-style "none"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour10,bg=colour7"
-set -g status-left "#[fg=colour15,bg=colour4] #S #[fg=colour4,bg=colour7,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour10,bg=colour7,nobold,nounderscore,noitalics] %Y-%m-%d %H:%M #[fg=colour15,bg=colour14] #(~/bin/utcdate) #[fg=colour10,bg=colour12,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour10] #h "
-setw -g window-status-format "#[fg=colour10,bg=colour7] #I #[fg=colour10,bg=colour7]#W "
-setw -g window-status-current-format "#[fg=colour10,bg=colour7,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour10]#{?window_zoomed_flag,#[bg=4],#[bg=14]} #I #W #[fg=colour12,bg=colour7,nobold,nounderscore,noitalics]"
-
-# Old colors:
-# setw -g window-status-current-format "#[fg=colour7,bg=colour14,nobold,nounderscore,noitalics]#[fg=colour8,bg=colour15]#{?window_zoomed_flag,#[bg=4],#[bg=14]} #I #W #[fg=colour14,bg=colour7,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#828C99,bg=#FAFAFA"
+set -g status-left "#[fg=colour255,bg=#0449B6] #S #[fg=#0353BE,bg=#FAFAFA,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#FFFFFF,bg=#FAFAFA,nobold,nounderscore,noitalics]#[fg=#5C6773,bg=#FFFFFF] %Y-%m-%d %H:%M #[fg=#5C6773,bg=#FFFFFF,nobold,nounderscore,noitalics]#[fg=#FAFAFA,bg=#5C6773] #h "
+setw -g window-status-format "#[fg=#828C99,bg=#FAFAFA] #I #[fg=#828C99,bg=#FAFAFA]#W "
+setw -g window-status-current-format "#[fg=#FAFAFA,bg=#FFFFFF,nobold,nounderscore,noitalics]#[fg=#5C6773,bg=#FFFFFF] #I #[fg=#5C6773,bg=#FFFFFF]#W #[fg=#FFFFFF,bg=#FAFAFA,nobold,nounderscore,noitalics]"
+setw -g window-status-current-style "fg=#FFFFFF,bg=#0449B6"
 
 # Set message command colors
-set-option -g message-style "fg=colour11,bright,bg=colour15,nobold"
+# set-option -g message-style "fg=colour11,bright,bg=colour15,nobold"
 
 # Dim inactive panes (light)
-set -g window-style 'bg=colour7'
-set -g window-active-style 'bg=colour15'
+set -g window-style 'bg=#F7F7F7'
+set -g window-active-style 'bg=#FFFFFF'
 
 # Set select color
-set -g mode-style 'bg=colour7'
+# set -g mode-style 'bg=colour7'
