Add tmux dark mode (dracula-based)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-source-file ~/.tmux/tmuxline.light.conf
+# source-file ~/.tmux/tmuxline.light.conf
+source-file ~/.tmux/tmuxline.dark.conf
 
 set-option -g base-index 1             # Start window index count at 1 instead of 0
 set -g history-limit 500000            # Set the history limit higher
