Add extrakto to tmux
- Easily copy/insert text and open URLs in your browser

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,3 +65,8 @@ bind C-k send-keys 'C-k'
 bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+
+# Add extrakto to tmux
+run-shell ~/.tmux/extrakto/extrakto.tmux
+set -g @extrakto_fzf_tool "~/.fzf-zsh"
+bind-key u run-shell "~/.tmux/extrakto/scripts/open.sh \"#{pane_id}\""
