Add extrakto for tmux

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/pack/minpac/opt/minpac"]
 	path = .vim/pack/minpac/opt/minpac
 	url = https://github.com/k-takata/minpac
+[submodule ".tmux/extrakto"]
+	path = .tmux/extrakto
+	url = https://github.com/laktak/extrakto
