Fix mouse mode in tmux (new version issue?)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g history-limit 500000            # Set the history limit higher
 set -s escape-time 0                   # Allows for faster key repetition
 setw -g aggressive-resize on           # Don't constrain window size to smallest client if they're on another window
 set -g focus-events on                 # Send focus events to vim
-set -g mouse on                        # Enable mouse mode: scrolling, pane selecting and window selecting
+setw -g mouse on                       # Enable mouse mode: scrolling, pane selecting and window selecting
 set -g status-keys emacs               # Use emacs / readline key-bindings at the tmux prompt
 
 # Use 256 colors; needed for lightline.vim
