--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,10 +41,10 @@ is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # Secondary binding for C-l to retain redraw
-# bind C-l if-shell "$is_vim" "send-keys Escape\; send-keys l" "send-keys C-l"
+bind C-l if-shell "$is_vim" "send-keys Escape\; send-keys l" "send-keys C-l"
 
 # Use Option + capital vim motion keys for resizing
 bind -n M-H resize-pane -L
