--- a/.gitconfig
+++ b/.gitconfig
@@ -1,29 +1,104 @@
 [include]
   path = ~/.gitconfig.private
+
 [core]
   excludesfile = ~/.gitignore
+  pager = delta
+
 [push]
   default = current
+
 [alias]
   ll = log --format=fuller --graph --decorate
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   wdiff = diff --color-words
+
 [hub]
   protocol = https
+
 [url "https://github.com"]
   insteadOf = git://github.com
+
 [pull]
   ff = only
+
 [fetch]
   prune = true
+
 [gpg]
   program = gpg
+
 [commit]
   gpgsign = true
+	verbose = true
+	template = /Users/ericboehs/.git-commit-template.txt
+
 [credential]
   helper = cache --timeout=600
+
 [filter "lfs"]
   process = git-lfs filter-process
   required = true
   clean = git-lfs clean -- %f
   smudge = git-lfs smudge -- %f
+
+[init]
+	defaultBranch = master
+
+[blame]
+	coloring = highlightRecent
+
+[interactive]
+    diffFilter = delta --color-only --features=interactive
+
+[delta]
+    features = mellow-barbet
+    navigate = true
+    show-diff-stats = true
+
+[delta "interactive"]
+    keep-plus-minus-markers = false
+
+[delta "decorations"]
+    commit-decoration-style = blue ol
+    commit-style = raw
+    file-style = omit
+    hunk-header-decoration-style = "#3e3e43" box ul
+    hunk-header-file-style = red
+    hunk-header-line-number-style = "green"
+    hunk-header-style = file line-number syntax
+
+[delta "mellow-barbet"]
+    # author: https://github.com/kvrohit
+    # To configure terminal colors see https://github.com/kvrohit/mellow.nvim#terminals
+    dark = true
+    syntax-theme = base16
+    line-numbers = true
+    side-by-side = true
+    file-style = brightwhite
+    file-decoration-style = none
+    file-added-label = [+]
+    file-copied-label = [==]
+    file-modified-label = [*]
+    file-removed-label = [-]
+    file-renamed-label = [->]
+    hunk-header-decoration-style = "#3e3e43" box ul
+    plus-style = brightgreen black
+    plus-emph-style = black green
+    minus-style = brightred black
+    minus-emph-style = black red
+    line-numbers-minus-style = brightred
+    line-numbers-plus-style = brightgreen
+    line-numbers-left-style = "#3e3e43"
+    line-numbers-right-style = "#3e3e43"
+    line-numbers-zero-style = "#57575f"
+    zero-style = syntax
+    whitespace-error-style = black bold
+    blame-code-style = syntax
+    blame-palette = "#161617" "#1b1b1d" "#2a2a2d" "#3e3e43"
+    merge-conflict-begin-symbol = ~
+    merge-conflict-end-symbol = ~
+    merge-conflict-ours-diff-header-style = yellow bold
+    merge-conflict-ours-diff-header-decoration-style = "#3e3e43" box
+    merge-conflict-theirs-diff-header-style = yellow bold
+    merge-conflict-theirs-diff-header-decoration-style = "#3e3e43" box
