--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,29 +1,24 @@
-# source-file ~/.tmux/tmuxline.light.conf
-source-file ~/.tmux/tmuxline.dark.conf
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set-option -g base-index 1             # Start window index count at 1 instead of 0
-set -g history-limit 500000            # Set the history limit higher
-set -s escape-time 0                   # Allows for faster key repetition
-setw -g aggressive-resize on           # Don't constrain window size to smallest client if they're on another window
-set -g focus-events on                 # Send focus events to vim
-setw -g mouse on                       # Enable mouse mode: scrolling, pane selecting and window selecting
-set -g status-keys emacs               # Use emacs / readline key-bindings at the tmux prompt
+# Default configurations
+set-option -g base-index 1 # Start window index count at 1 instead of 0
+setw -g mouse on           # Enable mouse mode: scrolling, pane selecting and window selecting
+setw -g mode-keys vi       # use vim keys while in copy mode
 
-# Use 256 colors; needed for lightline.vim
-set -g default-terminal "screen-256color"
+# Plugin configurations
+set -g @open-S 'https://google.com/search?q=' # tmux-open Shift-S won't work w/i this
+set -g @catppuccin_window_status_enable "yes" # Adds icons to each window (including if it's zoomed)
+set -g @catppuccin_window_right_separator " " # Needed as icon was getting cut off
 
-# Restore "open new pane/window in current directory" functionality
-bind c new-window -c "#{pane_current_path}"
-
-# More intuitive keybindings for splitting
-bind \\ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-
-# use vim keys while in copy mode
-setw -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+# Keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection # Make v work like you'd expect in copy mode
 
 # Switch windows via Meta+number
 bind -n M-1 select-window -t 1
@@ -36,37 +31,13 @@ bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
 
-# use Ctrl+h|j|k|l to move between panes unless in vim (so that vim can handle moving around)
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-
-# Secondary binding for C-l to retain redraw
-bind C-l if-shell "$is_vim" "send-keys Escape\; send-keys l" "send-keys C-l"
-
-# Use Option + capital vim motion keys for resizing
-bind -n M-H resize-pane -L
-bind -n M-J resize-pane -D
-bind -n M-K resize-pane -U
-bind -n M-L resize-pane -R
-
-# Send literal Ctrl+h|j|k|z|etc
-bind M-H send-keys 'M-H'
-bind M-J send-keys 'M-J'
-bind M-K send-keys 'M-K'
-bind M-L send-keys 'M-L'
+# Send literal Ctrl+h|j|k
 bind C-h send-keys 'C-h'
 bind C-j send-keys 'C-j'
 bind C-k send-keys 'C-k'
 
-# Reload tmux.conf with prefix-r
-bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
-
+# Allow custom configuration
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 
-# Add extrakto to tmux
-run-shell ~/.tmux/extrakto/extrakto.tmux
-set -g @extrakto_fzf_tool "~/.fzf-zsh"
-bind-key u run-shell "~/.tmux/extrakto/scripts/open.sh \"#{pane_id}\""
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
