--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,18 +4,26 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux'
+#set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Default configurations
 set-option -g base-index 1 # Start window index count at 1 instead of 0
 setw -g mouse on           # Enable mouse mode: scrolling, pane selecting and window selecting
 setw -g mode-keys vi       # use vim keys while in copy mode
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Plugin configurations
 set -g @open-S 'https://google.com/search?q=' # tmux-open Shift-S won't work w/i this
 set -g @catppuccin_window_status_enable "yes" # Adds icons to each window (including if it's zoomed)
 set -g @catppuccin_window_right_separator " " # Needed as icon was getting cut off
+
+# Simple status bar
+set-option -g status-style "bg=default,fg=white"               # Transparent
+set-option -g status 2                                        # Add top margin
+set-option -g status-format[0] ""                             # Empty the top line
+set-option -g status-format[1] "#I#{?window_zoomed_flag, 󰊓,}" # Only show window number and zoomed icon
 
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection # Make v work like you'd expect in copy mode
