Update tmux configuration with floax plugin and special activity indicator
- Add tmux-floax plugin for floating panes
- Add @special_activity flag support for Claude integration
- Show circled dot (⊙) when @special_activity is set, regular dot (•) for normal activity
- Auto-clear @special_activity flag when focusing any pane
- Enables Claude to show visual notifications only when user is in different window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,38 +6,63 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 #set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'omerxx/tmux-floax'
 
 # Default configurations
 set-option -g base-index 1 # Start window index count at 1 instead of 0
 setw -g mouse on           # Enable mouse mode: scrolling, pane selecting and window selecting
 setw -g mode-keys vi       # use vim keys while in copy mode
+set -g allow-passthrough all
+setw -g monitor-activity on # Monitor activity in windows
+# set -g monitor-silence 0    # Don't monitor silence
+# set -g activity-action other # Only trigger on substantial activity
+setw -g monitor-bell on     # Monitor bell in windows
+set -g bell-action any      # Ring bell for any window
+
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+
+# make active border bright cyan
+set-hook -g pane-focus-out 'select-pane -P "fg=colour240"'
+set-hook -g pane-focus-in  'select-pane -P "fg=default"; set-window-option -u @special_activity'
+set -g pane-border-style 'fg=#191923'
+set -g pane-active-border-style 'fg=#89dceb'
 
 # Plugin configurations
 set -g @open-S 'https://google.com/search?q=' # tmux-open Shift-S won't work w/i this
 set -g @catppuccin_window_status_enable "yes" # Adds icons to each window (including if it's zoomed)
 set -g @catppuccin_window_right_separator " " # Needed as icon was getting cut off
 
+# Yank without leaving copy mode
+set -g @yank_action 'copy-pipe'
+
 # Simple status bar
 set-option -g status-style "bg=default,fg=white"               # Transparent
 set-option -g status 2                                        # Add top margin
 set-option -g status-format[0] ""                             # Empty the top line
-set-option -g status-format[1] "#I#{?window_zoomed_flag, 󰊓,}" # Only show window number and zoomed icon
+set-option -g status-format[1] "#{?window_zoomed_flag,󰊓 ,  }#{W:#{?window_active,#[fg=#89dceb],}#I#{?#{@special_activity},⊙,#{?#{||:#{window_activity_flag},#{window_bell_flag}},•, }} #{?window_active,#[fg=white],}  }" # Zoom icon on left with more spacing between windows
 
 # Keybindings
+bind-key Escape copy-mode # Prefix + Escape to enter copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection # Make v work like you'd expect in copy mode
+bind-key -T copy-mode-vi Escape send-keys -X cancel
 
-# Switch windows via Meta+number
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
+# Make session chooser start from 1 instead of 0. See: https://unix.stackexchange.com/a/755474.
+bind-key s choose-tree -ZsK '#{?#{e|<:#{line},9},#{e|+:1,#{line}},#{?#{e|<:#{line},35},M-#{a:#{e|+:97,#{e|-:#{line},9}}},}}'
+
+# Switch windows via Ctrl+number. For iTerm2: https://unix.stackexchange.com/a/314150
+bind -n C-1 select-window -t 1
+bind -n C-2 select-window -t 2
+bind -n C-3 select-window -t 3
+bind -n C-4 select-window -t 4
+bind -n C-5 select-window -t 5
+bind -n C-6 select-window -t 6
+bind -n C-7 select-window -t 7
+bind -n C-8 select-window -t 8
+bind -n C-9 select-window -t 9
+
+# Neovim :terminal bindings for fading inactive panes
+# set-option -g default-command 'nvim +terminal +startinsert +"autocmd TermClose * ++once quit"'
 
 # Send literal Ctrl+h|j|k
 bind C-h send-keys 'C-h'
