Improve tmux status format readability
- Break complex status format into multiple lines for clarity
- Add descriptive comment explaining each indicator symbol
- Make configuration easier to modify and understand

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,15 @@ set -g @yank_action 'copy-pipe'
 set-option -g status-style "bg=default,fg=white"               # Transparent
 set-option -g status 2                                        # Add top margin
 set-option -g status-format[0] ""                             # Empty the top line
-set-option -g status-format[1] "#{?window_zoomed_flag,󰊓 ,  }#{W:#{?window_active,#[fg=#89dceb],}#I#{?#{@special_activity},⊙,#{?#{||:#{window_activity_flag},#{window_bell_flag}},•, }} #{?window_active,#[fg=white],}  }" # Zoom icon on left with more spacing between windows
+# Status format: zoom-icon + window-numbers + activity-indicators (⊙ = claude,• = bell) + spacing
+set-option -g status-format[1] "\
+#{?window_zoomed_flag,󰊓 ,  }\
+#{W:\
+#{?window_active,#[fg=#89dceb],}\
+#I\
+#{?#{@special_activity},⊙,#{?#{window_bell_flag},•, }} \
+#{?window_active,#[fg=white],}\
+}"
 
 # Keybindings
 bind-key Escape copy-mode # Prefix + Escape to enter copy mode
