Clean up bundle configuration
- Remove localhost rubygems mirror
- Add explicit bundle set path configuration

--- a/.bundle/config
+++ b/.bundle/config
@@ -3,6 +3,6 @@ BUNDLE_PATH: ".bundle/bundle"
 BUNDLE_BIN: ".bundle/bundle/bin"
 BUNDLE_JOBS: "3"
 BUNDLE_DISABLE_SHARED_GEMS: "1"
-BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/: "http://localhost:9292"
 BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/__FALLBACK_TIMEOUT/: "true"
 BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/__FALLBACK_TIMEOUT: "3"
+BUNDLE_SET: "path .bundle/bundle"
