Enhance tmux configuration
- Auto-renumber windows when closed for cleaner window list
- Improve zoom indicator to only show in active window
- Override Ctrl-F in copy mode to page down instead of file search
- Add emoji selector keybinding (prefix + e)
- Add file ranger keybinding for weechat transfers (prefix + g)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ setw -g monitor-activity on # Monitor activity in windows
 # set -g activity-action other # Only trigger on substantial activity
 setw -g monitor-bell on     # Monitor bell in windows
 set -g bell-action any      # Ring bell for any window
+set -g renumber-windows on  # Automatically renumber windows when one is closed
 
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
@@ -41,8 +42,8 @@ set-option -g status-style "bg=default,fg=white"               # Transparent
 set-option -g status 2                                        # Add top margin
 set-option -g status-format[0] ""                             # Empty the top line
 # Status format: zoom-icon + window-numbers + activity-indicators (⊙ = claude,• = bell) + spacing
-set-option -g status-format[1] "\
-#{?window_zoomed_flag,󰊓 ,  }\
+set -g status-format[1] "\
+#{W:#{?window_active,#{?window_zoomed_flag,󰊓, },}} \
 #{W:\
 #{?window_active,#[fg=#89dceb],}\
 #I\
@@ -54,6 +55,9 @@ set-option -g status-format[1] "\
 bind-key Escape copy-mode # Prefix + Escape to enter copy mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection # Make v work like you'd expect in copy mode
 bind-key -T copy-mode-vi Escape send-keys -X cancel
+
+# Override tmux-copycat's Ctrl-F to page forward instead of file search
+bind-key -T copy-mode-vi C-f send-keys -X page-down
 
 # Make session chooser start from 1 instead of 0. See: https://unix.stackexchange.com/a/755474.
 bind-key s choose-tree -ZsK '#{?#{e|<:#{line},9},#{e|+:1,#{line}},#{?#{e|<:#{line},35},M-#{a:#{e|+:97,#{e|-:#{line},9}}},}}'
@@ -76,6 +80,10 @@ bind -n C-9 select-window -t 9
 bind C-h send-keys 'C-h'
 bind C-j send-keys 'C-j'
 bind C-k send-keys 'C-k'
+
+# Emoji selector
+bind e run-shell 'tmux new-window "ranger ~/Code/slack-emojis/; sleep 0.2; buffer=\$(tmux show-buffer); if [[ \$buffer != *$'\''\n'\''* ]]; then tmux send-keys -t #{pane_id} \"\$buffer\"; fi"'
+bind g run-shell 'tmux new-window "ranger /Users/ericboehs/.local/share/weechat/xfer"'
 
 # Allow custom configuration
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
