Add delta and TPM installation, add tmux C-l binding
- Add delta to Homebrew dependencies
- Install TPM (Tmux Plugin Manager) and plugins if not present
- Add C-l binding to send literal Ctrl+l in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,10 +76,11 @@ bind -n C-9 select-window -t 9
 # Neovim :terminal bindings for fading inactive panes
 # set-option -g default-command 'nvim +terminal +startinsert +"autocmd TermClose * ++once quit"'
 
-# Send literal Ctrl+h|j|k
+# Send literal Ctrl+h|j|k|l
 bind C-h send-keys 'C-h'
 bind C-j send-keys 'C-j'
 bind C-k send-keys 'C-k'
+bind C-l send-keys 'C-l'
 
 # Emoji selector
 bind e run-shell 'tmux new-window "ranger ~/Code/slack-emojis/; sleep 0.2; buffer=\$(tmux show-buffer); if [[ \$buffer != *$'\''\n'\''* ]]; then tmux send-keys -t #{pane_id} \"\$buffer\"; fi"'
