Add Blink/iOS keybindings, session switching, and scrollback config
Add Ctrl+N user-keys for Blink terminal, Alt+N session switching sorted
by creation time, increase history-limit to 500k, and add cursor shape
terminal overrides.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,9 +19,11 @@ setw -g monitor-activity on # Monitor activity in windows
 setw -g monitor-bell on     # Monitor bell in windows
 set -g bell-action any      # Ring bell for any window
 set -g renumber-windows on  # Automatically renumber windows when one is closed
+set -g history-limit 500000 # Set very high to prevent claude code scrollback lag
 
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[2 q"
 
 # make active border bright cyan
 set-hook -g pane-focus-out 'select-pane -P "fg=colour240"'
@@ -72,6 +74,38 @@ bind -n C-6 select-window -t 6
 bind -n C-7 select-window -t 7
 bind -n C-8 select-window -t 8
 bind -n C-9 select-window -t 9
+
+# Switch windows via Ctrl+number for Blink/iOS (user-keys with custom escape sequences)
+# Blink Custom Presses: set Ctrl-N to custom string \x1b[4N;9~ (e.g. Ctrl-1 = \x1b[41;9~)
+set -s user-keys[0] "\e[41;9~"
+set -s user-keys[1] "\e[42;9~"
+set -s user-keys[2] "\e[43;9~"
+set -s user-keys[3] "\e[44;9~"
+set -s user-keys[4] "\e[45;9~"
+set -s user-keys[5] "\e[46;9~"
+set -s user-keys[6] "\e[47;9~"
+set -s user-keys[7] "\e[48;9~"
+set -s user-keys[8] "\e[49;9~"
+bind -n User0 select-window -t 1
+bind -n User1 select-window -t 2
+bind -n User2 select-window -t 3
+bind -n User3 select-window -t 4
+bind -n User4 select-window -t 5
+bind -n User5 select-window -t 6
+bind -n User6 select-window -t 7
+bind -n User7 select-window -t 8
+bind -n User8 select-window -t 9
+
+# Switch sessions via Alt+number (sorted by creation time to match Prefix+s)
+bind -n M-1 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 1p)'
+bind -n M-2 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 2p)'
+bind -n M-3 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 3p)'
+bind -n M-4 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 4p)'
+bind -n M-5 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 5p)'
+bind -n M-6 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 6p)'
+bind -n M-7 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 7p)'
+bind -n M-8 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 8p)'
+bind -n M-9 run-shell 'tmux switch-client -t $(tmux list-sessions -F "##{session_created}:##S" | sort -n | cut -d: -f2 | sed -n 9p)'
 
 # Neovim :terminal bindings for fading inactive panes
 # set-option -g default-command 'nvim +terminal +startinsert +"autocmd TermClose * ++once quit"'
