--- a/.bundle/config
+++ b/.bundle/config
@@ -6,3 +6,4 @@ BUNDLE_DISABLE_SHARED_GEMS: "1"
 BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/__FALLBACK_TIMEOUT/: "true"
 BUNDLE_MIRROR__HTTPS://RUBYGEMS__ORG/__FALLBACK_TIMEOUT: "3"
 BUNDLE_SET: "path .bundle/bundle"
+BUNDLE_DEFAULT_CLI_COMMAND: "install"
