Add 24-hour clock to tmux status bar
Display military time with CT timezone label, right-aligned in muted
gray on the status line.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,8 @@ set -g status-format[1] "\
 #I\
 #{?#{@special_activity},⊙,#{?#{window_bell_flag},•, }} \
 #{?window_active,#[fg=white],}\
-}"
+}\
+#[align=right]#[fg=colour240]%H:%M CT"
 
 # Keybindings
 bind-key Escape copy-mode # Prefix + Escape to enter copy mode
@@ -119,6 +120,8 @@ bind C-l send-keys 'C-l'
 # Emoji selector
 bind e run-shell 'tmux new-window "ranger ~/Code/slack-emojis/; sleep 0.2; buffer=\$(tmux show-buffer); if [[ \$buffer != *$'\''\n'\''* ]]; then tmux send-keys -t #{pane_id} \"\$buffer\"; fi"'
 bind g run-shell 'tmux new-window "ranger /Users/ericboehs/.local/share/weechat/xfer"'
+bind C new-window opencode
+bind m set mouse \; display "Mouse #{?mouse,on,off}"
 
 # Allow custom configuration
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
