--- a/.gitconfig
+++ b/.gitconfig
@@ -29,7 +29,10 @@
   prune = true
 
 [gpg]
-  program = gpg
+  format = ssh
+
+[gpg "ssh"]
+  allowedSignersFile = ~/.ssh/allowed_signers
 
 [commit]
   gpgsign = true
