--- a/.gitconfig.private.example
+++ b/.gitconfig.private.example
@@ -1,7 +1,7 @@
 [user]
   name = Eric Boehs
   email = eric@boehs.com
-  signingkey = 54767C89D0F6768B
+  signingkey = ~/.ssh/id_ed25519.pub
 [github]
   user = ericboehs
 [credential "https://github.com"]
